--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -4,21 +4,18 @@ title: Deveb Kurulumu
 ---
 <div data-gnl="1 1p">
     <p>
-      Deveb'i projenize dahil etmek çok kolaydır. Yapmanız gereken CSS dosyasını
-      ve ihtiyaç duyuyorsanız Javascript dosyasını projenizin ilgili yerine kopyalamak
-      ve html dosyanızda çağırmaktan ibarettir. Türkçe kod yazmanın tadına varmak ister misiniz?
-      O halde Deveb'in türkçe diliyle geliştirilmiş sürümünü kullanın. Eğer ingilizce diliyle yazmayı
-      seçenlerdenseniz türkçe sürümünün arkasından gelen ingilizce sürümünü kullanabilirsiniz.
-      Deveb öncelikli olarak matematiksel yapıda olan türkçe dilinin doğal özelliklerinden faydalanarak kurgulanır.
-      İngilizce sürümü türkçe dilinin kolaylaştırdığı kurgudan yola çıkarak oluşturulur.
-      Kısaca Deveb kullanımı için yapmanız gereken sadece CSS dosyasını doğru şekilde projenize
-      dahil etmek olacak. Deveb'i Türkçe ve İngilizce kullanabilme olanağı sunulduğu için bunlar
-      ayrıştırılmış ve farklı dosyalar haline getirilmiştir. Aynı anda iki dilde satırlarınızı yazmak
-      gibi bir çılgınlığa sahipseniz tüm CSS'leri dahil etmeniz gerekecektir.
+      Deveb'i çalışmalarınıza eklemek çok kolaydır. CSS dosyasını ve gerek duyma durumuna göre
+      javascript dosyalarını çalışma dosyalarınızın arasında uygun yere kopyalayın. HTML dosyanızda
+      ise çağırma işlemini yapın.
+      <br><br>
+      İsteğe bağlı olmak üzere türkçe veya ingilizce diliyle geliştirilen deveb sürümlerini
+      kullanabilirsiniz. Dilerseniz iki dili de aynı anda kullanabilirsiniz.
     </p>
-    <p><a href="https://github.com/data-deveb/data-deveb.github.io/releases/download/s0.1-ilkel/deveb-s0.1-ilkel.zip">Deveb ön uç çerçevesi (Deveb Frontend Framework) dosyalarını buradan indirin.</a></p>
+    <p>
+      <a data-basmal class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/s0.1-ilkel/deveb-s0.1-ilkel.zip">İNDİR: deveb-s0.1-ilkel.zip</a>
+    </p>
 
-    <h2>Türkçe düşünenler için Türkçe diliyle Deveb</h2>
+    <h2>Deveb Türkçe Sürüm</h2>
     <pre data-gnl="1 1p"><code class="language-html">
     &lt;head&gt;
       &lt;script src=&quot;https://code.jquery.com/jquery-2.2.4.min.js&quot;  integrity=&quot;sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=&quot;  crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
@@ -27,7 +24,7 @@ title: Deveb Kurulumu
     &lt;/head&gt;
     </code></pre>
 
-    <h2>İngilizce düşünenler için İngilizce diliyle Deveb</h2>
+    <h2>Deveb English Version</h2>
     <pre data-gnl="1 1p"><code class="language-html">
     &lt;head&gt;
       &lt;link href=&quot;/css/deveb.english.css&quot; rel=&quot;stylesheet&quot;&gt;
