--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -3,95 +3,214 @@ layout: tek
 title: Tarayıcı Desteği
 ---
 <h1>Tarayıcı Desteği</h1>
-<p>Deveb önyüz iskeletini destekleyen tarayıcılar</p>
-<div data-gnl="24 24p">
-	<div data-gnl="24 24p">
-		<h2>Masaüstü Desteği</h2>
-		<p>Destekler güncel sürümlere göre belirtilmiştir.</p>
+<p>
+	Deveb'in desteği düzlemlerdeki tarayıcıların en güncel kararlı sürümlerine göre
+	belirtilmiştir. Deveb önyüz çatısını destekleyen masaüstü ve gezgin aygıtlardaki
+	tarayıcıların	durum bilgilerini aşağıda görebilirsiniz.
+</p>
+
+<div data-gnl="1 1p">
+	<h2>Gezgin Aygıtları</h2>
+	<p>Destek durumları güncel sürümlere göre belirtilmiştir.</p>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-chrome" aria-hidden="true"></i> Chrome</p>
+			</div>
+		</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Android
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> iOS
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-times" aria-hidden="true"></i> Windows 10 Gezgin
+			</div>
+		</div>
 	</div>
-	<div data-gnl="24 24p" data-deveb="üstte">
-		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel">
-					<i class="fa fa-chrome" aria-hidden="true"></i> Chrome
-				</div>
-			</div>
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel" data-metin="olumlu">
-					<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-				</div>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-firefox" aria-hidden="true"></i> Firefox</p>
 			</div>
 		</div>
-		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel">
-					<i class="fa fa-firefox" aria-hidden="true"></i> Firefox
-				</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Android
 			</div>
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel" data-metin="olumlu">
-					<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-				</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> iOS
 			</div>
-		</div>
-		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel">
-					<i class="fa fa-opera" aria-hidden="true"></i> Opera
-				</div>
-			</div>
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel" data-metin="olumlu">
-					<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-				</div>
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-times" aria-hidden="true"></i> Windows 10 Gezgin
 			</div>
 		</div>
-		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel">
-					<i class="fa fa-safari" aria-hidden="true"></i> Safari
-				</div>
-			</div>
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel" data-metin="olumlu">
-					<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-				</div>
+	</div>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-edge" aria-hidden="true"></i> Edge</p>
 			</div>
 		</div>
-		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel">
-					<i class="fa fa-internet-explorer" aria-hidden="true"></i> IE 10+
-				</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Android
 			</div>
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel metin-belirsiz">
-					<i class="fa fa-times" aria-hidden="true"></i> Belirsiz
-				</div>
-				<div class="kutu kutu-genel" data-metin="olumsuz">
-					<ul class="liste-temiz">
-						<li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk</li>
-						<li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
-					</ul>
-				</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> iOS
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Windows 10 Gezgin
 			</div>
 		</div>
-		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel">
-					<i class="fa fa-edge" aria-hidden="true"></i> Edge
-				</div>
+	</div>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-safari" aria-hidden="true"></i> Safari</p>
 			</div>
-			<div data-gnl="3 6p" data-ufk="6 6p">
-				<div class="kutu kutu-genel metin-belirsiz">
-					<i class="fa fa-times" aria-hidden="true"></i> Belirsiz
-				</div>
-				<div class="kutu kutu-genel" data-metin="olumsuz">
-					<ul class="liste-temiz">
-						<li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk </li>
-						<li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
-					</ul>
-				</div>
+		</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-check" aria-hidden="true"></i> Android
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> iOS
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-times" aria-hidden="true"></i> Windows 10 Gezgin
+			</div>
+		</div>
+	</div>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-web" aria-hidden="true"></i> Diğer</p>
+			</div>
+		</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel metin-belirsiz">
+				<i class="fa fa-question-circle-o" aria-hidden="true"></i> Android
+			</div>
+			<div class="kutu kutu-genel metin-belirsiz">
+				<i class="fa fa-question-circle-o" aria-hidden="true"></i> iOS
+			</div>
+			<div class="kutu kutu-genel metin-belirsiz">
+				<i class="fa fa-question-circle-o" aria-hidden="true"></i> Windows 10 Gezgin
+			</div>
+		</div>
+	</div>
+</div>
+<div data-gnl="1 1p">
+	<h2>Masaüstü Aygıtları</h2>
+	<p>Destek durumları güncel sürümlere göre belirtilmiştir.</p>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-chrome" aria-hidden="true"></i> Chrome</p>
+			</div>
+		</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Windows
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Linux
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Mac
+			</div>
+		</div>
+	</div>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-firefox" aria-hidden="true"></i> Firefox</p>
+			</div>
+		</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Windows
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Linux
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Mac
+			</div>
+		</div>
+	</div>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-opera" aria-hidden="true"></i> Opera</p>
+			</div>
+		</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Windows
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Linux
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Mac
+			</div>
+		</div>
+	</div>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-edge" aria-hidden="true"></i> IE10+</p>
+			</div>
+		</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Windows
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-times" aria-hidden="true"></i> Linux
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-times" aria-hidden="true"></i> Mac
+			</div>
+		</div>
+	</div>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-edge" aria-hidden="true"></i> Edge</p>
+			</div>
+		</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Windows
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-times" aria-hidden="true"></i> Linux
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-times" aria-hidden="true"></i> Mac
+			</div>
+		</div>
+	</div>
+	<div data-gnl="6 6p" data-kçk="1 6p">
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div data-gnl="0 göbekte" class="kutu kutu-genel">
+				<p><i class="fa fa-safari" aria-hidden="true"></i> Safari</p>
+			</div>
+		</div>
+		<div data-gnl="3 6p" data-kçk="6 6p">
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-times" aria-hidden="true"></i> Windows
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumsuz gri">
+				<i class="fa fa-times" aria-hidden="true"></i> Linux
+			</div>
+			<div class="kutu kutu-genel" data-metin="olumlu">
+				<i class="fa fa-check" aria-hidden="true"></i> Mac
 			</div>
 		</div>
 	</div>
