--- a/belgeler/hata.html
+++ b/belgeler/hata.html
@@ -2,6 +2,34 @@
 layout: default
 title: Hata!
 ---
-<div class="birincil">
+<div data-gnl="1 1p" class="birincil" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
 Birincil renk denemesi 1
+</div>
+<div data-gnl="1 1p" class="ikincil" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+İkincil renk denemesi 1
+</div>
+<div data-gnl="1 1p" class="üçüncül" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+Üçüncül renk denemesi 1
+</div>
+<div data-gnl="1 1p" class="dördüncül" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+Dördüncül renk denemesi 1
+</div>
+<div data-gnl="1 1p" class="beşincil" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+Beşincil renk denemesi 1
+</div>
+
+<div data-gnl="1 1p" class="birincil tip2" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+Birincil tip2 renk denemesi 1
+</div>
+<div data-gnl="1 1p" class="ikincil tip2" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+İkincil tip2 renk denemesi 1
+</div>
+<div data-gnl="1 1p" class="üçüncül tip2" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+Üçüncül tip2 renk denemesi 1
+</div>
+<div data-gnl="1 1p" class="dördüncül tip2" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+Dördüncül tip2 renk denemesi 1
+</div>
+<div data-gnl="1 1p" class="beşincil tip2" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+Beşincil tip2 renk denemesi 1
 </div>
