--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -1,39 +1,92 @@
 ---
 layout: default
-title: Kap Örgüsü
+title: Kap Örgüsü (s0.91)
 ---
-
-    <h1>Kap Örgüsü <span data-metin="dikkat gri">(s0.91)</span></h1>
-
     <p>
-      İşte bu! Çoklu kap örgüsü (multi-grid system) ile tek düzene bağlı kalmaktan
-      kurtuluşa bakıyorsunuz. Tasarımlarınızı dökerken aynı anda 12'li, 16'lı, 24'lü
-      veya 1'den 24'e kadar herhangi bir düzeni kullanmak istemez misiniz? Nasıl yani
-      dediğinizi duyar gibiyiz. Başka önyüz çatıları sizi tek ölçek üzerinden
-      tasarımlarınızı oluşturmaya mahkum kılmaktadır. Bu nedenle tam olarak istediğinize
-      erişmek her zaman mümkün olmamakla birlikte özel dokunuşlar yapmak durumunda
-      olursunuz. Deveb özgürlük alanınızı çok fazla genişletti. Kap örgüsüne hoş geldiniz!<br><br>
-
-      Aynı sayfa içinde 1'den 24'e kadar desteklenen kap düzenlerini dilediğiniz an, dilediğiniz yerde ve dilediğiniz ekran ölçeğiyle kullanın. Yalnız söylememiz gerekiyor. Şu ana kadar bahsettiğimiz kap örgüsünün parça düzeniydi. Diğer özelliklerini incelediğinizde ne kadar zengin bir özellikte olduğunu fark edeceksiniz.</p>
+      İşte bu! Tek düzende çalışmak zorunda olmaktan kurtuldunuz. Çoklu kap örgüsü
+      (multi-grid system) özellikleriyle kullanıma hazır.
+    </p>
+    <p>
+      Deveb'in kap örgüsü size aynı anda dilediğiniz düzeni kullanabilmeyi sağlar.
+      12'li, 16'lı, 24'lü... Yani 1'li düzenden 24'lü düzene kadar hepsini aynı
+      anda kullanabilirsiniz. Hala anlaşılmadı mı? O halde şöyle anlatalım;
+    </p>
+    <p>
+      Diğer önyüz çatılarında kap örgüleri (grid system) sabittir. Yani bir tane
+      düzen seçmek zorundasınızdır. Eğer 24'lü düzen seçtiyseniz tüm tasarımınızı
+      24'lü düzeni dikkate alarak yapmak zorundasınızdır. Düzeni değiştirdiğinizde
+      html tarafında yazdığınız tüm değerler yeni düzene göre değerler alacaktır.
+      Bu da tasarımınızı bozacaktır. Bunun yanında tasarımınızı yaparken ölçeklerin
+      size tam hitap etmediğini fark edeceksiniz. Keşkeler içinizde oluşmaya başlayacak...
+      Bu nedenle tam olarak istediğinize erişmek her zaman mümkün olmamakla birlikte
+      özel dokunuşlar yapmak durumunda olacaksınız.
+    </p>
+    <p>
+      Siz en iyisi diğer önyüz çatılarının sunduğu özellikleri düşünmeyin. Deveb'de dilediğiniz
+      an dilediğiniz yerde kullanabileceğiniz kap örgüsünün parça düzenleri sizi
+      özgür hissettirecek. Evet, özgürlüğe çok yakınsınız. O halde zengin özelliklere sahip
+      Deveb'in kap örgüsüne hoş geldiniz!
+    </p>
 
     <h2>Kap Örgüsü Nedir, Nasıl Kullanılır?</h2>
-
-    <p>Kap örgüsü kullanıldığı sayfanın içinde genişlikler tanımlamaya yarar. "Kap" sözcüğünün bilinen bir anlamı da fiziksel bir şeyi bir arada tutmaya yarayan nesne demektir. Deveb'in kap örgüsü, kendisine özgü kullanımıyla ilk başta anlaşılmaz gibi duracak. Ancak bir kere anladığınızda işler eskisi gibi olmayacak.</p>
-    <p>Kap örgüsü, parça düzeni ve genleşme düzeni olmak üzere iki ana düzenden oluşur. Bu düzenler kendilerine özgü özellikleri ile tasarımcının tercihine bırakılmış düzenlerdir. Bunların yanında sıralama özelliği, konumlama özelliği, gizleme özelliği gibi özelliklerde sizi bekliyor.</p>
-
-    <p>O halde kap örgüsünü keşfetmeye başlayalım. İlk olarak parça düzeninden başlayalım. Çünkü her yerde ihtiyaç duyacağını en önemli özellik.</p>
+    <p>
+      Kap örgüsü, kullanıldığı sayfanın içinde genişlikler tanımlamaya yarar. "Kap"
+      sözcüğünün bilinen bir anlamı da fiziksel bir şeyi bir arada tutmaya yarayan
+      nesne demektir. Deveb'in kap örgüsü, kendisine özgü kullanımıyla ilk başta
+      anlaşılmaz gibi duracak. Ancak bir kere anladığınızda işler eskisi gibi olmayacak.
+    </p>
+    <p>
+      Parça düzeni ve genleşme düzeni olmak üzere iki ana düzenden oluşan bir kap
+      örgüsüdür. Bu düzenler kendilerine özgü özellikleri ile kullanımı tasarımcının
+      tercihine bırakılmış düzenlerdir. Bunların yanında sıralama özelliği, konumlama
+      özelliği, gizleme özelliği gibi özellikler de sizi bekliyor.
+    </p>
+    <p>
+      O halde kap örgüsüne her yerde ihtiyaç duyulacak en önemli özellikten yani
+      parça düzeninden başlayalım.
+    </p>
 
     <h3>Parça Düzeni</h3>
-    <p>Parça düzeni yüzdesel oranlarda kararlı genişlik ölçüleri tanımlamanıza yardımcıdır. Ekranı satırlar olarak kurgulamak zorunda değilsiniz. Kap kavramını oturttukça dilediğiniz yönde kurgularınızı oluşturabilirsiniz. Parça düzeni ile oluşturacağınız kaplar nasıl bir özellikte olduğunu anında kendini size gösterecek. Hazırsanız <a href="/belgeler/kap-orgusu/parca-duzeni.html">parça düzeni</a> belgelerini okuyarak ayrıntılı bilgiler edinin.</p>
+    <p>
+      Parça düzeni yüzdesel oranlarda kararlı genişlik ölçüleri tanımlamanıza yardımcıdır.
+      Ekranı satırlar olarak kurgulamak zorunda değilsiniz. Kap kavramını oturttukça
+      dilediğiniz yönde kurgularınızı oluşturabilirsiniz. Parça düzeni ile oluşturacağınız
+      kaplar nasıl bir özellikte olduğunu anında kendini size gösterecek. Hazırsanız
+      <a href="/belgeler/kap-orgusu/parca-duzeni.html">parça düzeni</a> belgelerini
+      okuyarak ayrıntılı bilgiler edinin.
+    </p>
 
     <h3>Genleşme Düzeni</h3>
-    <p>Genleşme düzenine gelince. Bu düzende yüzdesel oranlarda çalışmaktadır. Ancak html nesnesinin kenarlarından içe veya dışa doğru mesafe koymak istediğinizde hesaplar biraz değişir. Bunun yanı sıra satırsal olarak çalışmalısınız. Yani genleşme düzenini kullanırken bir başka bölüm alttan devam etsin gibi bir isteğiniz olursa farklı yöntemlere başvurmanız gerekecektir. Daha derinlemesine <a href="/belgeler/kap-orgusu/genlesme-duzeni.html">genleşme düzenini</a> inceleyin. Genleşme düzeni ve parça düzeni kıyasına bakmayı unutmayın.</p>
+    <p>
+      Bu düzen yüzdesel oranlarla çalışmaktadır. Ancak html nesnesinin kenarlarından
+      içe veya dışa doğru mesafe koymak istediğinizde hesaplar biraz değişir. Bunun
+      yanı sıra satırsal olarak çalışmalısınız. Yani genleşme düzenini kullanırken
+      bir başka bölüm alttan devam etsin gibi bir isteğiniz olursa farklı yöntemlere
+      başvurmanız gerekecektir. Daha derinlemesine
+      <a href="/belgeler/kap-orgusu/genlesme-duzeni.html">genleşme düzenini</a>
+      inceleyin. Genleşme düzeni ve parça düzeni kıyasına bakmayı unutmayın.
+    </p>
 
     <h3>Konumlama</h3>
-    <p>Konumlama özelliği kap örgüsünün en çok kullanılan özelliğidir. Konumlama çalışmalarınızı yaparken size sunduğu olanakların işinizi ne kadar kolaylaştırdığını görmeniz güç değil. Ayrıntıları incelerken her şeyi ilk seferde fark edeceğinizden konuyu fazla uzatmıyor ve <a href="/belgeler/kap-orgusu/konumlama.html">konumlama sayfasına</a> yönlendiriyoruz.</p>
+    <p>
+      Konumlama özelliği kap örgüsünün en çok kullanılan özelliğidir. Konumlama
+      çalışmalarınızı yaparken size sunduğu olanakların işinizi ne kadar kolaylaştırdığını
+      görmeniz güç değil. Ayrıntıları incelerken her şeyi ilk seferde fark edeceğinizden
+      konuyu fazla uzatmıyor ve <a href="/belgeler/kap-orgusu/konumlama.html">konumlama sayfasına</a>
+      yönlendiriyoruz.
+    </p>
 
     <h3>Sıralama</h3>
-    <p>Sıralama özelliği kap örgüsünün ilginç bir özelliğidir. Günümüzde display:flex ile gelen özelliklerden biridir. Aslında bunun geçmişi biraz daha uzundur ancak kabul edilir derecede yaygınlaşması nedeniyle birçok kişi için yenidir. Mesela geniş ekranlarda yan yana duran iki nesnenin dar ekranlarda alt alta durmasını sağladınız ama alttaki aslında üstte durmalı diye karar verdiniz. Nasıl yapacaksınız? İşte sıralama özelliği burada yardımınıza koşuyor. Ayrıntılar için <a href="/belgeler/kap-orgusu/siralama.html">sıralama sayfasını</a> inceleyebilirsiniz. </p>
+    <p>
+      Sıralama özelliği kap örgüsünün ilginç bir özelliğidir. Günümüzde display:flex
+      ile gelen özelliklerden biridir. Aslında bunun geçmişi biraz daha uzundur
+      ancak kabul edilir derecede yaygınlaşması nedeniyle birçok kişi için yenidir.
+      Mesela geniş ekranlarda yan yana duran iki nesnenin dar ekranlarda alt alta
+      durmasını sağladınız ama alttaki aslında üstte durmalı diye karar verdiniz.
+      Nasıl yapacaksınız? İşte sıralama özelliği burada yardımınıza koşuyor. Ayrıntılar
+      için <a href="/belgeler/kap-orgusu/siralama.html">sıralama sayfasını</a>
+      inceleyebilirsiniz.
+    </p>
 
 
 
