--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -69,30 +69,30 @@ title: Kap Örgüsü Konumlama
     <div data-gnl="1 1p">
       üstte
     </div>
-    <div data-gnl="1 1p göbekte-ol">
-      göbekte-ol
+    <div data-gnl="1 1p">
+      üstte
     </div>
-    <div data-gnl="1 1p altta-ol">
-      altta-ol
+    <div data-gnl="1 1p">
+      üstte
     </div>
   </div>
   <div data-gnl="1 3p göbekte" style="height:33vh;">
-    <div data-gnl="1 1p üstte-ol">
-      üstte-ol
+    <div data-gnl="1 1p">
+      göbekte
     </div>
     <div data-gnl="1 1p">
       göbekte
     </div>
-    <div data-gnl="1 1p altta-ol">
-      altta-ol
+    <div data-gnl="1 1p">
+      göbekte
     </div>
   </div>
   <div data-gnl="1 3p altta" style="height:33vh;">
-    <div data-gnl="1 1p üstte-ol">
-      üstte-ol
+    <div data-gnl="1 1p">
+      altta
     </div>
-    <div data-gnl="1 1p göbekte-ol">
-      göbekte-ol
+    <div data-gnl="1 1p">
+      altta
     </div>
     <div data-gnl="1 1p">
       altta
@@ -104,30 +104,30 @@ title: Kap Örgüsü Konumlama
   &lt;div data-gnl=&quot;1 1p&quot;&gt;
     &uuml;stte
   &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 1p g&ouml;bekte-ol&quot;&gt;
-    g&ouml;bekte-ol
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;
+    &uuml;stte
   &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 1p altta-ol&quot;&gt;
-    altta-ol
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;
+    &uuml;stte
   &lt;/div&gt;
   &lt;/div&gt;
 &lt;div data-gnl=&quot;1 3p g&ouml;bekte&quot; style=&quot;height:33vh;&quot;&gt;
-  &lt;div data-gnl=&quot;1 1p &uuml;stte-ol&quot;&gt;
-    &uuml;stte-ol
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;
+    g&ouml;bekte
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 1p&quot;&gt;
     g&ouml;bekte
   &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 1p altta-ol&quot;&gt;
-    altta-ol
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;
+    g&ouml;bekte
   &lt;/div&gt;
 &lt;/div&gt;
 &lt;div data-gnl=&quot;1 3p altta&quot; style=&quot;height:33vh;&quot;&gt;
-  &lt;div data-gnl=&quot;1 1p &uuml;stte-ol&quot;&gt;
-    &uuml;stte-ol
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;
+    altta
   &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 1p g&ouml;bekte-ol&quot;&gt;
-    g&ouml;bekte-ol
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;
+    altta
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 1p&quot;&gt;
     altta
@@ -208,14 +208,14 @@ title: Kap Örgüsü Konumlama
     </div>
   </div>
   <div data-gnl="1 2p" style="height:33vh;">
-    <div data-gnl="0">
-      varsayılan
-    </div>
-    <div data-gnl="0 uzun-ol">
-      uzun-ol
+    <div data-gnl="0 üstte-ol">
+      üstte-ol
     </div>
     <div data-gnl="0">
-      varsayılan
+      varsayılan (uzat)
+    </div>
+    <div data-gnl="0 üstte-ol">
+      üstte-ol
     </div>
   </div>
 </div>
@@ -231,15 +231,15 @@ title: Kap Örgüsü Konumlama
    uzat
  &lt;/div&gt;
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 2p&quot; style=&quot;height:33vh;&quot;&gt;
- &lt;div data-gnl=&quot;0&quot;&gt;
-   varsay&#305;lan
- &lt;/div&gt;
- &lt;div data-gnl=&quot;0 uzun-ol&quot;&gt;
-   uzun-ol
+&lt;div data-gnl=&quot;1 2p uzat&quot; style=&quot;height:33vh;&quot;&gt;
+ &lt;div data-gnl=&quot;0 üstte-ol&quot;&gt;
+   üstte-ol
  &lt;/div&gt;
  &lt;div data-gnl=&quot;0&quot;&gt;
-   varsay&#305;lan
+   varsaylıan (uzat)
+ &lt;/div&gt;
+ &lt;div data-gnl=&quot;0 üstte-ol&quot;&gt;
+   üstte-ol
  &lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
@@ -250,7 +250,15 @@ title: Kap Örgüsü Konumlama
 <p>"satırda-ol" sınıfı bir buldunduğu etiketi bir çizgi konumuna dizerek gösterir.</p>
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
-  <div data-gnl="1 2p satırda" style="height:33vh;">
+  <div data-gnl="1 1p">
+    <div data-gnl="0" style="font-size:2em">
+      Varsayılan örnek bir yazı.
+    </div>
+    <div data-gnl="0">
+      Varsayılan örnek bir yazı.
+    </div>
+  </div>
+  <div data-gnl="1 1p satırda">
     <div data-gnl="0" style="font-size:2em">
       Örnek bir yazı "satırda".
     </div>
@@ -258,7 +266,7 @@ title: Kap Örgüsü Konumlama
       Örnek bir yazı "satırda".
     </div>
   </div>
-  <div data-gnl="1 2p" style="height:33vh;">
+  <div data-gnl="1 1p">
     <div data-gnl="0 satırda-ol" style="font-size:2em">
       Örnek bir yazı "satırda-ol".
     </div>
@@ -268,7 +276,7 @@ title: Kap Örgüsü Konumlama
   </div>
 </div>
 <pre data-gnl="1 1p"><code class="language-html">
-&lt;div data-gnl=&quot;1 2p sat&#305;rda&quot; style=&quot;height:33vh;&quot;&gt;
+&lt;div data-gnl=&quot;1 1p sat&#305;rda&quot; style=&quot;height:33vh;&quot;&gt;
   &lt;div data-gnl=&quot;0&quot; style=&quot;font-size:2em&quot;&gt;
     &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda&quot;.
   &lt;/div&gt;
@@ -276,7 +284,7 @@ title: Kap Örgüsü Konumlama
     &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda&quot;.
   &lt;/div&gt;
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 2p&quot; style=&quot;height:33vh;&quot;&gt;
+&lt;div data-gnl=&quot;1 1p&quot; style=&quot;height:33vh;&quot;&gt;
   &lt;div data-gnl=&quot;0 sat&#305;rda-ol&quot; style=&quot;font-size:2em&quot;&gt;
     &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda-ol&quot;.
   &lt;/div&gt;
