--- a/belgeler/hata.html
+++ b/belgeler/hata.html
@@ -2,7 +2,30 @@
 layout: default
 title: Hata!
 ---
-<div data-gnl="1 1p" class="birincil" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
+<div data-gnl="1 1p sütun ortada">
+  <div data-gnl="1 2p" class="birincil" style="padding:10px; border-width:1px; border-style:solid;">
+  Birincil renk denemesi 1
+  </div>
+  <div data-gnl="1 2p" class="birincil" style="padding:10px; border-width:1px; border-style:solid;">
+  Birincil renk denemesi 1
+  </div>
+  <div data-gnl="1 2p" class="birincil" style="padding:10px; border-width:1px; border-style:solid;">
+  Birincil renk denemesi 1
+  </div>
+  <div data-gnl="1 3p" class="birincil" style="padding:10px; border-width:1px; border-style:solid; ">
+  Birincil renk denemesi 1
+  </div>
+  <div data-gnl="1 3p" class="birincil" style="padding:10px; border-width:1px; border-style:solid; ">
+  Birincil renk denemesi 1
+  </div>
+  <div data-gnl="1 3p" class="birincil" style="padding:10px; border-width:1px; border-style:solid; ">
+  Birincil renk denemesi 1
+  </div>
+  <div data-gnl="1 3p" class="birincil" style="padding:10px; border-width:1px; border-style:solid;">
+  Birincil renk denemesi 1
+  </div>
+</div>
+<div data-gnl="1 1p" class="birincil" style="padding:10px; border-width:1px; border-style:solid;">
 Birincil renk denemesi 1
 </div>
 <div data-gnl="1 1p" class="ikincil" style="padding:10px; border-width:1px; border-style:solid; margin:5px;">
