--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -28,6 +28,106 @@ title: Kap Örgüsü (s0.91)
       Deveb'in kap örgüsüne hoş geldiniz!
     </p>
 
+    <style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ebedf0;color:#333;background-color:#fff;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ebedf0;color:#333;background-color:rgba(0,0,0,.02);}
+    .tg .tg-l711{}
+    .tg .tg-us36{vertical-align:top}
+    .tg .tg-yw4l{vertical-align:top}
+    </style>
+    <table class="tg">
+      <tr>
+        <th class="tg-us36" colspan="2">Özellik<br></th>
+        <th class="tg-us36">Açıklama</th>
+      </tr>
+      <tr>
+        <td class="tg-us36" colspan="2">1~24<br></td>
+        <td class="tg-us36">Parça düzeninde kaç adet parçanın kullanılacağını belirtmek için kullanılan değer aralığı.</td>
+      </tr>
+      <tr>
+        <td class="tg-us36" colspan="2">1p~24p</td>
+        <td class="tg-us36">Parça düzeninde kaç parçalık düzenin kullanılacağını belirtmek için kullanılan değer aralığı.</td>
+      </tr>
+      <tr>
+        <td class="tg-l711" rowspan="9">aralıklar<br></td>
+        <td class="tg-us36">aralarını-arala<br></td>
+        <td class="tg-us36">Ögeleri bulunduğu alanın kenarına yaslayarak aralarında eşit aralıklar açar.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">dengeli-arala<br></td>
+        <td class="tg-us36">Ögeleri birbirleri arasında ögelerin her iki yanından dengeli aralıklar açar.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">yanları-arala<br></td>
+        <td class="tg-us36">Üstten, alttan, sağdan, soldan sabit değerde aralık açar<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">sağısolu-arala<br></td>
+        <td class="tg-us36">Sağdan ve soldan sabit değerde aralık açar.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">altıüstü-arala<br></td>
+        <td class="tg-us36">Üstten ve alttan sabit değerde aralık açar.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">üstü-arala<br></td>
+        <td class="tg-us36">Üstten sabit değerde aralık açar.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">sağı-arala<br></td>
+        <td class="tg-us36">Sağdan sabit değerde aralık açar.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">altı-arala<br></td>
+        <td class="tg-us36">Alttan sabit değerde aralık açar<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">solu-arala<br></td>
+        <td class="tg-us36">Soldan sabit değerde aralık açar.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-l711" rowspan="7">diziliş</td>
+        <td class="tg-us36">solda</td>
+        <td class="tg-us36">Ögeleri sola dizer.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">ortada</td>
+        <td class="tg-us36">Ögeleri ortaya dizer.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-us36">sağda</td>
+        <td class="tg-us36">Ögeleri sağa dizer.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-yw4l">üstte</td>
+        <td class="tg-yw4l">Ögeleri üstte dizer.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-yw4l">göbekte</td>
+        <td class="tg-yw4l">Ögeleri göbeğe (dikey olarak ortaya) dizer.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-yw4l">altta</td>
+        <td class="tg-yw4l">Ögeleri alta dizer.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-yw4l">merkezde</td>
+        <td class="tg-yw4l">Ögeleri merkeze dizer.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-yw4l"></td>
+        <td class="tg-yw4l">boyda</td>
+        <td class="tg-yw4l">Ögeleri gererek aynı boya uzatır.<br></td>
+      </tr>
+      <tr>
+        <td class="tg-yw4l"></td>
+        <td class="tg-yw4l">satırda</td>
+        <td class="tg-yw4l">Ögeleri satır çizgisine dizer.<br></td>
+      </tr>
+    </table>
+
+
     <h2>Kap Örgüsü Nedir, Nasıl Kullanılır?</h2>
     <p>
       Kap örgüsü, kullanıldığı sayfanın içinde genişlikler tanımlamaya yarar. "Kap"
