--- a/belgeler/diller.html
+++ b/belgeler/diller.html
@@ -2,203 +2,20 @@
 layout: default
 title: Diller
 ---
-
 <div data-gnl="1 1p">
   <h1>Ekran Örgüsü Değişkenleri</h1>
-  <div data-kart="">
-    <h2>$gnl</h2>
-    <span data-imgelik="kapsül" class="üçüncül">Ekran örgüsü</span>
-    <p>
-      Tüm ekranlara etki eden ekran ölçeği değişkeni
-    </p>
-    <p class="alt">
-      <span>Türkçe: gnl</span>
-      <br>
-      <span>English: gnl</span>
-    </p>
-  </div>
-  <div data-kart="">
-    <h2>$mnk</h2>
-    <span data-imgelik="kapsül" class="üçüncül">Ekran örgüsü</span>
-    <p>
-      Sadece minik ekranlara etki eden ekran ölçeği değişkeni
-    </p>
-    <p class="alt">
-      <span>Türkçe: mnk</span>
-      <br>
-      <span>English: mn</span>
-    </p>
-  </div>
-  <div data-kart="">
-    <h2>$ufk</h2>
-    <span data-imgelik="kapsül" class="üçüncül">Ekran örgüsü</span>
-    <p>
-      Ufak ve daha büyük ekranlara etki eden ekran ölçeği değişkeni
-    </p>
-    <p class="alt">
-      <span>Türkçe: ufk</span>
-      <br>
-      <span>English: xs</span>
-    </p>
-  </div>
-  <div data-kart="">
-    <h2>$kçk</h2>
-    <span data-imgelik="kapsül" class="üçüncül">Ekran örgüsü</span>
-    <p>
-      Küçük ve daha büyük ekranlara etki eden ekran ölçeği değişkeni
-    </p>
-    <p class="alt">
-      <span>Türkçe: kçk</span>
-      <br>
-      <span>English: kçk</span>
-    </p>
-  </div>
-  <div data-kart="">
-    <h2>$ort</h2>
-    <span data-imgelik="kapsül" class="üçüncül">Ekran örgüsü</span>
-    <p>
-      Orta ve daha büyük ekranlara etki eden ekran ölçeği değişkeni
-    </p>
-    <p class="alt">
-      <span>Türkçe: ort</span>
-      <br>
-      <span>English: md</span>
-    </p>
-  </div>
+   {% for veri in site.data.scss_degiskenleri %}
+      <div data-kart="">
+        <h2>{{ veri.degisken_adi }}</h2>
+        <span data-imgelik="kapsül" class="üçüncül">{{ veri.alan }}</span>
+        <p>
+          {{ veri.aciklama }}
+        </p>
+        <p class="alt">
+          <span>Türkçe: {{ veri.tr }}</span>
+          <br>
+          <span>English: {{ veri.en }}</span>
+        </p>
+      </div>
+   {% endfor %}
 </div>
-
-
-<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;border:none;border-color:#aabcfe;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#aabcfe;color:#669;background-color:#e8edff;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#aabcfe;color:#039;background-color:#b9c9fe;}
-.tg .tg-c3ow{border-color:inherit;text-align: left;vertical-align:top}
-.tg .tg-us36{border-color:inherit;vertical-align:top}
-.tg .tg-z029{background-color:#ecf4ff;border-color:inherit;vertical-align:top}
-.tg .tg-ov9q{background-color:#D2E4FC;border-color:inherit;vertical-align:top}
-</style>
-
-<table class="tg">
-  <tr>
-    <th class="tg-c3ow" colspan="1">Ekran Örgüsü<br></th>
-    <th class="tg-c3ow" colspan="2">Durum<br></th>
-    <th class="tg-c3ow" colspan="2">Diller</th>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">Küme</td>
-    <td class="tg-ov9q">CSS Değişken Adı<br></td>
-    <td class="tg-ov9q">Açıklama</td>
-    <td class="tg-ov9q">Türkçe<br></td>
-    <td class="tg-ov9q">English<br></td>
-  </tr>
-  <tr>
-    <td class="tg-z029" rowspan="8">Ekran Ölçekleri<br></td>
-    <td class="tg-us36">$gnl<br></td>
-    <td class="tg-us36">Tüm ekranlar<br></td>
-    <td class="tg-us36">gnl</td>
-    <td class="tg-us36">gnl<br></td>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">$mnk<br></td>
-    <td class="tg-ov9q">Minik ekranlar<br></td>
-    <td class="tg-ov9q">mnk</td>
-    <td class="tg-ov9q">mn</td>
-  </tr>
-  <tr>
-    <td class="tg-us36">$ufk<br></td>
-    <td class="tg-us36">Ufak ekran ve üstü<br></td>
-    <td class="tg-us36">ufk</td>
-    <td class="tg-us36">xs</td>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">$kçk</td>
-    <td class="tg-ov9q">Küçük ekran ve üstü<br></td>
-    <td class="tg-ov9q">kçk</td>
-    <td class="tg-ov9q">sm</td>
-  </tr>
-  <tr>
-    <td class="tg-us36">$ort<br></td>
-    <td class="tg-us36">Orta ekran ve üstü<br></td>
-    <td class="tg-us36">ort</td>
-    <td class="tg-us36">md</td>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">$byk</td>
-    <td class="tg-ov9q">Büyük ekran ve üstü<br></td>
-    <td class="tg-ov9q">byk</td>
-    <td class="tg-ov9q">lg<br></td>
-  </tr>
-  <tr>
-    <td class="tg-us36">$kcm<br></td>
-    <td class="tg-us36">Kocaman ekran ve üstü<br></td>
-    <td class="tg-us36">kcm</td>
-    <td class="tg-us36">xl</td>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">$dev</td>
-    <td class="tg-ov9q">Dev ekran ve üstü<br></td>
-    <td class="tg-ov9q">dev</td>
-    <td class="tg-ov9q">hg</td>
-  </tr>
-  <tr>
-    <th class="tg-c3ow" colspan="1">Kap Örgüsü<br></th>
-    <th class="tg-c3ow" colspan="2">Durum<br></th>
-    <th class="tg-c3ow" colspan="2">Diller</th>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">Küme</td>
-    <td class="tg-ov9q">CSS Değişken Adı<br></td>
-    <td class="tg-ov9q">Açıklama</td>
-    <td class="tg-ov9q">Türkçe<br></td>
-    <td class="tg-ov9q">English<br></td>
-  </tr>
-  <tr>
-    <td class="tg-z029" rowspan="8">Kap Ölçekleri<br></td>
-    <td class="tg-us36">$ekran<br></td>
-    <td class="tg-us36">Ekran örgüsünün değerlerini alır.</td>
-    <td class="tg-us36">$gnl, $mnk, $ufk, $kçk, $ort, $byk, $kcm, $dev</td>
-    <td class="tg-us36">$gnl, $mnk, $ufk, $kçk, $ort, $byk, $kcm, $dev</td>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">$mnk<br></td>
-    <td class="tg-ov9q">Minik ekranlar<br></td>
-    <td class="tg-ov9q">mnk</td>
-    <td class="tg-ov9q">mn</td>
-  </tr>
-  <tr>
-    <td class="tg-us36">$ufk<br></td>
-    <td class="tg-us36">Ufak ekran ve üstü<br></td>
-    <td class="tg-us36">ufk</td>
-    <td class="tg-us36">xs</td>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">$kçk</td>
-    <td class="tg-ov9q">Küçük ekran ve üstü<br></td>
-    <td class="tg-ov9q">kçk</td>
-    <td class="tg-ov9q">sm</td>
-  </tr>
-  <tr>
-    <td class="tg-us36">$ort<br></td>
-    <td class="tg-us36">Orta ekran ve üstü<br></td>
-    <td class="tg-us36">ort</td>
-    <td class="tg-us36">md</td>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">$byk</td>
-    <td class="tg-ov9q">Büyük ekran ve üstü<br></td>
-    <td class="tg-ov9q">byk</td>
-    <td class="tg-ov9q">lg<br></td>
-  </tr>
-  <tr>
-    <td class="tg-us36">$kcm<br></td>
-    <td class="tg-us36">Kocaman ekran ve üstü<br></td>
-    <td class="tg-us36">kcm</td>
-    <td class="tg-us36">xl</td>
-  </tr>
-  <tr>
-    <td class="tg-ov9q">$dev</td>
-    <td class="tg-ov9q">Dev ekran ve üstü<br></td>
-    <td class="tg-ov9q">dev</td>
-    <td class="tg-ov9q">hg</td>
-  </tr>
-</table>
