--- a/belgeler/diller.html
+++ b/belgeler/diller.html
@@ -2,20 +2,42 @@
 layout: default
 title: Diller
 ---
+<p>Bu sayfadaki bilgiler deveb geliştiricilerine yöneliktir. Kaynak dosyalarıyla ilgili yaptıkları çalışmalarda buradaki bilgiler yardımcı olması amacıyla üretilmiştir.</p>
 <div data-gnl="1 1p">
   <h1>Ekran Örgüsü Değişkenleri</h1>
-   {% for veri in site.data.scss_degiskenleri %}
+   {% for veri in site.data.scss_degiskenleri.ekran_orgusu %}
       <div data-kart="">
-        <h2>{{ veri.degisken_adi }}</h2>
-        <span data-imgelik="kapsül" class="üçüncül">{{ veri.alan }}</span>
-        <p>
-          {{ veri.aciklama }}
-        </p>
-        <p class="alt">
-          <span>Türkçe: {{ veri.tr }}</span>
+        <div class="bilgi">
+          <h2>{{ veri.degisken_adi }}</h2>
+          <span data-imgelik="kapsül" class="üçüncül">{{ veri.alan }}</span>
+          <p>
+            {{ veri.aciklama }}
+          </p>
+        </div>
+        <div class="alt">
+          <span>Türkçe: <b>{{ veri.tr }}</b></span>
           <br>
-          <span>English: {{ veri.en }}</span>
-        </p>
+          <span>English: <b>{{ veri.en }}</b></span>
+        </div>
+      </div>
+   {% endfor %}
+</div>
+<div data-gnl="1 1p">
+  <h1>Kap Örgüsü Değişkenleri</h1>
+   {% for veri in site.data.scss_degiskenleri.kap_orgusu %}
+      <div data-kart="">
+        <div class="bilgi">
+          <h2>{{ veri.degisken_adi }}</h2>
+          <span data-imgelik="kapsül" class="üçüncül">{{ veri.alan }}</span>
+          <p>
+            {{ veri.aciklama }}
+          </p>
+        </div>
+        <div class="alt">
+          <span>Türkçe: <b>{{ veri.tr }}</b></span>
+          <br>
+          <span>English: <b>{{ veri.en }}</b></span>
+        </div>
       </div>
    {% endfor %}
 </div>
