Chrome sıkıntısı çözüldü.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: deveb
 ---
 <div data-gnl="8 8p göbekte" data-ort="8 8p" class="beri-üst-2">
   <div data-gnl="8 8p uzun-ol göbekte" data-ort="4 8p">
-    <div data-gnl="1 1p" data-etki="havada">
+    <div data-gnl="1 1p göbekte" data-etki="havada">
       <h1 class="metin-deveb" style="font-size:60pt; margin:0; justify-content:center; font-family: 'Comfortaa', cursive; color:#eee !important; display:flex;">deveb</h1>
       <p class="metin-gri-3 beri-1" style="font-size:13pt; text-align:center;">
         İşte bu! Yepyeni bir önyüz çatısı buldunuz. Ağ (web) sayfalarınızı tasarlarken deveb'in oluşturduğu özelliklerden faydalanın. Tüm uygulamalarınızı kapsamlı bileşenleri ile kolayca yapmaya başlayın.
