--- a/belgeler/kap-orgusu/parca-duzeni.html
+++ b/belgeler/kap-orgusu/parca-duzeni.html
@@ -11,6 +11,9 @@ title: Parça Düzeni
 
   <p>Kap örgüsünün en çok kullanılan özelliği parça düzenidir. Parça düzeni kararlı yüzdesel genişliklerle şablonlar oluşturmanız için hazırlanmıştır. Tek parçadan yani 1 parçadan 24 parçaya kadar tüm parça düzenlerini kullanıma sunar. "<span data-metin="ana">SAYI SAYIp</span>" değerleri html dosyasında istenilen ekran örgüsüne yazılarak kullanılır. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için <a href="/belgeler/ekran-orgusu.html">data-gnl</a>="2 3p" <a href="/belgeler/ekran-orgusu.html">data-gnl</a>="1 3p" değerlerini tanımlaybilirsiniz.</p>
 
+  <div data-gnl="1 1p ortada">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/NKGZ8HWdnFw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
   <h3>Parça Düzeni "SAYI SAYIp" Kullanım Yöntemi</h3>
 
   <p>Kap oluşturmak için bir parça düzeni yazdığınız an tarayıcılara şunu dersiniz; "Bulunduğum genişliği SAYIp kadar eşit parçaya bölerek SAYI kadar parça genişliğini kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız yeterlidir.</p>
