--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -429,7 +429,7 @@ title: Kap Örgüsü Konumlama
       Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
     </div>
   </div>
-  <div data-gnl="1 24p taşmadan">
+  <div data-gnl="1 24p kaymadan">
     Taşmadan yazamadıklarımızdan mısınız?
   </div>
 </div>
@@ -448,7 +448,7 @@ title: Kap Örgüsü Konumlama
   Buradaki i&ccedil;erikler dürmeden etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
  &lt;/div&gt;
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 24p taşmadan&quot;&gt;
+&lt;div data-gnl=&quot;1 24p kaymadan&quot;&gt;
  Taşmadan yazamadıklarımızdan mısınız?
 &lt;/div&gt;
 </code></pre>
