öte işlemleri belgelere eklendi.

--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -10,6 +10,43 @@ title: Kap Örgüsü Konumlama
 </style>
 <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç öznitelik sınıfıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
+<h3>Konumlama: sağdan|soldan-SAYI SAYIp-öte</h3>
+<p>Bir ögeyi soldan veya sağdan öte bırakmak istiyorsak bu konumlama özelliğini kullanırız.</p>
+<div data-gnl="1 1p" class="önizleme">
+  <h3>Önizleme</h3>
+  <div data-gnl="1 1p">
+    <div data-gnl="1 3p soldan-1 6p-öte">
+      1 3p soldan-1 6p-öte
+    </div>
+    <div data-gnl="1 3p soldan-2 19p-öte">
+      1 3p soldan-2 19p-öte
+    </div>
+    <div data-gnl="1 3p sağdan-2 3p-öte">
+      1 3p sağdan-2 3p-öte
+    </div>
+    <div data-gnl="3 4p">
+      3 4p
+    </div>
+  </div>
+</div>
+<pre data-gnl="1 1p"><code class="language-html">
+&lt;div data-gnl=&quot;1 1p&quot;&gt;
+ &lt;div data-gnl=&quot;1 3p soldan-1 6p-öte&quot;&gt;
+  1 3p soldan-1 6p-öte
+ &lt;/div&gt;
+ &lt;div data-gnl=&quot;1 3p soldan-2 19p-öte&quot;&gt;
+  1 3p soldan-2 19p-öte
+ &lt;/div&gt;
+ &lt;div data-gnl=&quot;1 3p sağdan-2 3p-öte&quot;&gt;
+  1 3p sağdan-2 3p-öte
+ &lt;/div&gt;
+ &lt;div data-gnl=&quot;3 4p&quot;&gt;
+  3 4p
+ &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
+<p></p>
+
 <h3>Konumlama: <span data-metin="dikkat">solda | ortada | sağda | solda-ol | ortada-ol | sağda-ol</span></h3>
 <p>"solda" sınıfı bir HTML etiketindeki içeriği sola dayalı olarak gösterir.</p>
 <p>"ortada" sınıfı bir HTML etiketindeki içeriği ortalanmış olarak gösterir.</p>
