--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -10,7 +10,7 @@ title: Kap Örgüsü Konumlama
 </style>
 <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç öznitelik sınıfıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
-<h3>Konumlama: sağdan|soldan-SAYI SAYIp-öte</h3>
+<h3>Konumlama: <span data-metin="dikkat">sağdan|soldan-SAYI SAYIp-öte</span></h3>
 <p>Bir ögeyi soldan veya sağdan öte bırakmak istiyorsak bu konumlama özelliğini kullanırız.</p>
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
