Konumlamalardaki hatalar düzeltildi.

--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -102,7 +102,7 @@ title: Kap Örgüsü Konumlama
 <p></p>
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
-  <div data-gnl="1 3p üstte" style="height:33vh;">
+  <div data-gnl="1 3p üstte" style="height:500px;">
     <div data-gnl="1 1p">
       üstte
     </div>
@@ -113,7 +113,7 @@ title: Kap Örgüsü Konumlama
       üstte
     </div>
   </div>
-  <div data-gnl="1 3p göbekte" style="height:33vh;">
+  <div data-gnl="1 3p göbekte" style="height:500px;">
     <div data-gnl="1 1p">
       göbekte
     </div>
@@ -174,31 +174,31 @@ title: Kap Örgüsü Konumlama
 <p></p>
 
 
-<h3>Konumlama: <span data-metin="dikkat">geniş-aralıklı | aralıklı</span></h3>
-<p>"geniş-aralıklı" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
-<p>"aralıklı" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
+<h3>Konumlama: <span data-metin="dikkat">araları-aralık | dengeli-aralık</span></h3>
+<p>"araları-aralık" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
+<p>"dengeli-aralık" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
-  <div data-gnl="1 1p geniş-aralıklı">
+  <div data-gnl="1 1p araları-aralık">
     <div data-gnl="1 8p">
-      geniş-aralıklı
+      araları-aralık
     </div>
     <div data-gnl="1 8p">
-      geniş-aralıklı
+      araları-aralık
     </div>
     <div data-gnl="1 8p">
-      geniş-aralıklı
+      araları-aralık
     </div>
   </div>
-  <div data-gnl="1 1p aralıklı">
+  <div data-gnl="1 1p dengeli-aralık">
     <div data-gnl="1 8p">
-      aralıklı
+      dengeli-aralık
     </div>
     <div data-gnl="1 8p">
-      aralıklı
+      dengeli-aralık
     </div>
     <div data-gnl="1 8p">
-      aralıklı
+      dengeli-aralık
     </div>
   </div>
 </div>
@@ -447,11 +447,14 @@ title: Kap Örgüsü Konumlama
 <p></p>
 
 <h3>Konumlama: <span data-metin="dikkat">kaymadan | dürmeden</span></h3>
-<p>"taşmadan" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
+<p>"kaymadan" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
 <p>"dürmeden" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
 <p></p>
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
+  <div data-gnl="1 24p kaymadan">
+    Taşmadan yazamadıklarımızdan mısınız?
+  </div>
   <div data-gnl="1 1p dürmeden">
     <div>
       Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
@@ -465,9 +468,6 @@ title: Kap Örgüsü Konumlama
     <div>
       Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
     </div>
-  </div>
-  <div data-gnl="1 24p kaymadan">
-    Taşmadan yazamadıklarımızdan mısınız?
   </div>
 </div>
 <pre data-gnl="1 1p"><code class="language-html">
